--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
 
-
-    <script src="index.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  <!-- jQuery -->
+    <script src="index.js" charset="utf-8"></script> <!-- javaScript -->
   </body>
 </html>
