adding img tag and anchor tag to play with its attributes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <button type="button" name="button">Click Me</button>
-    <button type="button" name="button">Click Me</button>
+    <img src="img1.jpeg" alt="">
+    <a href="https://www.google.com">Google</a>
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
