--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Hello</h1>
     <img src="img1.jpeg" alt="">
-    <a href="https://www.google.com">Google</a>
+    <a href="https://www.google.com">Search</a>
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
