--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
     <button type="button" name="button">Click Me</button>
-
+    <input type="text" name="" value="">
+    <textarea name="name" rows="8" cols="80"></textarea>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  <!-- jQuery -->
     <script src="index.js" charset="utf-8"></script> <!-- javaScript -->
   </body>
